--- a/main.html
+++ b/main.html
@@ -1,45 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sematic Navbar & Audios</title>
-  </head>
-
-  <body>
-    <!-- Sematic Navbar -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Semantic Navbar & Audios</title>
+</head>
+<body>
+    <!-- Navigation Bar -->
     <nav>
-      <ul>
-        <li><a href="https://www.google.com">Google</a></li>
-        <li><a href="https://www.wikipedia.org">Wikipedia</a></li>
-        <li><a href="https://stackoverflow.com">Stack Overflow</a></li>
-      </ul>
-    </nav>
+    <ul>
+        <li><a href="https://www.google.com">Link 1</a></li>
+        <li><a href="https://www.wikipedia.org">Link 2</a></li>
+        <li><a href="https://www.github.com">Link 3</a></li>
+    </ul>
+</nav>
+
+
     <!-- Audio Section -->
-    <section>
-      <h1>3 Random Audios</h1>
-      <audio controls>
-        <source
-          src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"
-          type="audio/mpeg"
-        />
+    <h2>3 random audios</h2>
+    <audio controls>
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
-      </audio>
-      <audio controls>
-        <source
-          src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"
-          type="audio/ogg"
-        />
+    </audio>
+    <audio controls>
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
         Your browser does not support the audio element.
-      </audio>
-      <audio controls>
-        <source
-          src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"
-          type="audio/mpeg"
-        />
+    </audio>
+    <audio controls>
+        <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
-      </audio>
-    </section>
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
+    </audio>
+</body>
 </html>
